@@ -1,4 +1,4 @@
-/* $Id: tif_dirread.c,v 1.137 2007-12-31 21:52:16 fwarmerdam Exp $ */
+/* $Id: tif_dirread.c,v 1.138 2008-02-09 09:51:49 joris Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -4667,18 +4667,15 @@ TIFFFetchNormalTag(TIFF* tif, TIFFDirEntry* dp, int recover)
 				assert(fip->field_readcount==2);
 				assert(fip->field_passcount==0);
 				if (dp->tdir_count!=2)
-					assert(0);
-				else
+					return(0);
+				err=TIFFReadDirEntryShortArray(tif,dp,&data);
+				if (err==TIFFReadDirEntryErrOk)
 				{
-					err=TIFFReadDirEntryShortArray(tif,dp,&data);
-					if (err==TIFFReadDirEntryErrOk)
-					{
-						int m;
-						m=TIFFSetField(tif,dp->tdir_tag,data[0],data[1]);
-						_TIFFfree(data);
-						if (!m)
-							return(0);
-					}
+					int m;
+					m=TIFFSetField(tif,dp->tdir_tag,data[0],data[1]);
+					_TIFFfree(data);
+					if (!m)
+						return(0);
 				}
 			}
 			break;
